...
    <string name="ui_search">Search</string>
    <string name="ui_search_in_book">Search in book…</string>
    <string name="ui_no_results">No results</string>
    <string name="ui_result_position">%1$d of %2$d</string>
    <string name="ui_previous_result">Previous result</string>
    <string name="ui_next_result">Next result</string>
    <string name="ui_close_search">Close search</string>
    <string name="ui_footnote">Footnote</string>
    <string name="ui_return_to_previous_position">Return to previous position</string>
    <string name="ui_next_chapter">Next chapter</string>
    <string name="ui_look_up">Look up</string>
    <string name="ui_table_of_contents">Table of Contents</string>
    <string name="ui_options">Options</string>
...
